--- a/public/userAdd.html
+++ b/public/userAdd.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>华联超市管理系统</title>
+    <!-- jquery.min.js -->
+    <script src="./libs/jquery/jquery.min.js"></script>
     <!-- 引入elementui.min.css -->
     <link rel="stylesheet" href="./libs/elementui/css/elementui.min.css">
     <!-- 引入自定义样式 -->
@@ -22,74 +24,6 @@
     <div id="app">
         <!-- 整个页面的容器 -->
         <el-container>
-            <!-- 左侧导航容器 -->
-            <el-aside width="230px">
-                <!-- 左侧导航上部分文本 -->
-                <div class="menu-top-text">
-                    <h2>华联超市管理系统</h2>
-                    <p>您好, admin</p>
-                    <p>
-                        <a href="">管理首页</a> |
-                        <a href="">退出系统</a>
-                    </p>
-                </div>
-
-                <!-- 导航菜单 -->
-                <el-menu :unique-opened="true">
-                    <!-- 账号管理 -->
-                    <el-submenu index="1">
-                        <template slot="title">
-                            <i class="el-icon-circle-plus-outline"></i>账号管理</template>
-                        <el-menu-item-group>
-                            <el-menu-item index="1-1">添加账号</el-menu-item>
-                            <el-menu-item index="1-2">账号列表</el-menu-item>
-                            <el-menu-item index="1-3">密码修改</el-menu-item>
-                        </el-menu-item-group>
-
-                    </el-submenu>
-                    <!-- 商品管理 -->
-                    <el-submenu index="2">
-                        <template slot="title">
-                            <i class="el-icon-goods"></i>商品管理</template>
-                        <el-menu-item-group>
-                            <el-menu-item index="2-1">添加商品</el-menu-item>
-                            <el-menu-item index="2-2">商品列表</el-menu-item>
-                        </el-menu-item-group>
-
-                    </el-submenu>
-                    <!-- 进货管理 -->
-                    <el-submenu index="3">
-                        <template slot="title">
-                            <i class="el-icon-tickets"></i>进货管理</template>
-                        <el-menu-item-group>
-                            <el-menu-item index="3-1">添加库存</el-menu-item>
-                            <el-menu-item index="3-2">库存列表</el-menu-item>
-                        </el-menu-item-group>
-
-                    </el-submenu>
-                    <!-- 出货管理 -->
-                    <el-submenu index="4">
-                        <template slot="title">
-                            <i class="el-icon-sold-out"></i>出货管理</template>
-                        <el-menu-item-group>
-                            <el-menu-item index="4-1">销售列表</el-menu-item>
-                            <el-menu-item index="4-2">商品出库</el-menu-item>
-                            <el-menu-item index="4-3">商品退货</el-menu-item>
-                        </el-menu-item-group>
-
-                    </el-submenu>
-                    <!-- 系统信息 -->
-                    <el-submenu index="5">
-                        <template slot="title">
-                            <i class="el-icon-sold-out"></i>系统管理</template>
-                        <el-menu-item-group>
-                            <el-menu-item index="5-1">系统信息</el-menu-item>
-                        </el-menu-item-group>
-
-                    </el-submenu>
-                </el-menu>
-            </el-aside>
-
             <!-- 右侧内容容器 -->
             <el-container>
                 <!-- 右侧头部 -->
@@ -119,8 +53,8 @@
                                     <el-input v-model="loginForm.confirmPassword"></el-input>
                                 </el-form-item>
                                 <!-- 选择用户组 -->
-                                <el-form-item label="选择用户组" prop="region">
-                                    <el-select v-model="loginForm.region" placeholder="请选择用户组">
+                                <el-form-item label="选择用户组" prop="group">
+                                    <el-select v-model="loginForm.group" placeholder="请选择用户组">
                                         <el-option label="普通用户" value="普通用户"></el-option>
                                         <el-option label="超级管理员" value="超级管理员"></el-option>
                                     </el-select>
@@ -128,7 +62,7 @@
 
                                 <!-- 登录&重置 -->
                                 <el-form-item>
-                                    <el-button type="primary" @click="submitForm('loginForm')">登录</el-button>
+                                    <el-button type="primary" @click="submitForm('loginForm')">添加</el-button>
                                     <el-button @click="resetForm('loginForm')">重置</el-button>
                                 </el-form-item>
                             </el-form>
@@ -166,7 +100,8 @@
                     loginForm: {
                         username: '',  // 用户名
                         password: '',  // 密码
-                        confirmPassword: '' // 确认密码
+                        confirmPassword: '', // 确认密码
+                        group: ''
                     },
                     // 验证规则
                     rules: {
@@ -185,7 +120,7 @@
                             { validator: checkPass, required: true, trigger: 'blur' }  // 自定义验证函数
                         ],
                         // 选择用户组
-                        region: [
+                        group: [
                             {required: true, message: "请选择用户组", trigger:'change'}
                         ]
                     }
@@ -198,7 +133,29 @@
                         // 如果验证通过 valid就是true 否则 就是false
                         if (valid) {
                             // 验证通过 允许把用户名和密码 发送给后端 (需要写ajax)
-                            alert('前端验证通过!可以发给后端!' + ', 用户名是：' + this.loginForm.username + ',密码是:' + this.loginForm.password);
+                            // 这里一定要打印！！！
+                            // console.log(this.loginForm.username, this.loginForm.password, this.loginForm.group)    
+                            
+                            // 定义参数对象
+                            const params = {
+                                "username": this.loginForm.username,
+                                "password": this.loginForm.password,
+                                "group": this.loginForm.group
+                            }
+
+                            // 构造ajax 把数据发送个后端
+                            $.post('/users/userAdd', params, function (data) {
+                                // 如果成功 弹出对应的提示信息   data.errcode === 1
+                                if (data.errcode === 1) {
+                                    alert(data.msg);
+                                    // 》》跳 转到用户账号列表页面
+                                    location.href = "./userList.html";
+                                } else {
+                                // 否则 就是失败 弹出对应的提示信息  data.errcode === 0
+                                    alert(data.msg)
+                                }
+                            })
+                            
 
                         } else {
                             // 前端验证不通过 不允许提交
