--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                     <p>您好, admin</p>
                     <p>
                         <a href="./main.html" target="contentWrap">管理首页</a> |
-                        <a href="./login.html">退出系统</a>
+                        <a href="./users/loginout">退出系统</a>
                     </p>
                 </div>
 
@@ -43,7 +43,7 @@
                         <el-menu-item-group>
                             <el-menu-item index="1-1"><a href="./userAdd.html" target="contentWrap">添加账号</a> </el-menu-item>
                             <el-menu-item index="1-2"><a href="./userList.html" target="contentWrap">账号列表</a> </el-menu-item>
-                            <el-menu-item index="1-3"><a href="">密码修改</a> </el-menu-item>
+                            <el-menu-item index="1-3"><a href="./changePwd.html" target="contentWrap">密码修改</a> </el-menu-item>
                         </el-menu-item-group>
                     </el-submenu>
 
@@ -83,7 +83,7 @@
                         <template slot="title">
                             <i class="el-icon-setting"></i>系统管理</template>
                         <el-menu-item-group>
-                            <el-menu-item index="5-1">系统信息</el-menu-item>
+                            <el-menu-item index="5-1"><a href="./main.html" target="contentWrap">系统信息</a></el-menu-item>
                         </el-menu-item-group>
                     </el-submenu>
                 </el-menu>
