--- a/public/userAdd.html
+++ b/public/userAdd.html
@@ -17,6 +17,8 @@
     <script src="./libs/vue/vue.min.js"></script>
     <!-- 引入elementui.min.js -->
     <script src="./libs/elementui/js/elementui.min.js"></script>
+    <!-- 检测是否登录 -->
+    <script src="/users/checkIsLogin"></script>
 </head>
 
 <body>
@@ -46,11 +48,11 @@
                                 </el-form-item>
                                 <!-- 密码 -->
                                 <el-form-item label="密&emsp;码" prop="password">
-                                    <el-input type="text" v-model="loginForm.password" autocomplete="off"></el-input>
+                                    <el-input type="password" v-model="loginForm.password" autocomplete="off"></el-input>
                                 </el-form-item>
                                 <!-- 确认密码 -->
                                 <el-form-item label="确认密码" prop="confirmPassword">
-                                    <el-input v-model="loginForm.confirmPassword"></el-input>
+                                    <el-input type="password" v-model="loginForm.confirmPassword"></el-input>
                                 </el-form-item>
                                 <!-- 选择用户组 -->
                                 <el-form-item label="选择用户组" prop="group">
@@ -62,7 +64,7 @@
 
                                 <!-- 登录&重置 -->
                                 <el-form-item>
-                                    <el-button type="primary" @click="submitForm('loginForm')">添加</el-button>
+                                    <el-button type="success" @click="submitForm('loginForm')">添加</el-button>
                                     <el-button @click="resetForm('loginForm')">重置</el-button>
                                 </el-form-item>
                             </el-form>
