--- a/public/userEdit.html
+++ b/public/userEdit.html
@@ -17,6 +17,8 @@
     <script src="./libs/vue/vue.min.js"></script>
     <!-- 引入elementui.min.js -->
     <script src="./libs/elementui/js/elementui.min.js"></script>
+    <!-- 检测是否登录 -->
+    <script src="/users/checkIsLogin"></script>
 </head>
 
 <body>
