更新了项目整体

--- a/public/goodsEdit.html
+++ b/public/goodsEdit.html
@@ -123,7 +123,7 @@
 
                                 <!-- 按钮操作 -->
                                 <el-form-item>
-                                    <el-button type="success" @click="submitForm('goodsForm')">添加</el-button>
+                                    <el-button type="success" @click="submitForm('goodsForm')">修改</el-button>
                                     <el-button @click="resetForm('goodsForm')">清空</el-button>
                                 </el-form-item>
                             </el-form>
